# cargo-deepagents

./: .gitignore  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  config.example.toml  install.py  pyproject.toml  requirements.txt  setup.py
agents/api-agent/references/: REST_PATTERNS.md
agents/base-agent/: SKILL.md
agents/coder-agent/: SKILL.md
agents/coder-agent/references/: PATTERNS.md  TESTING.md
agents/database-agent/references/: MONGODB_GUIDE.md
agents/debug-agent/: SKILL.md
agents/debug-agent/references/: FIXES.md
agents/debug-agent/scripts/: debug_helper.py
agents/devops-agent/: SKILL.md
agents/devops-agent/references/: KUBERNETES_GUIDE.md
agents/docs-agent/references/: DOCSTRING_GUIDE.md  README_TEMPLATE.md
agents/frontend-agent/: SKILL.md
agents/frontend-agent/references/: REACT_PATTERNS.md
agents/main-agent/references/: ROUTING_LOGIC.md
agents/main-agent/scripts/: route_request.py
agents/planner-agent/scripts/: create_plan.py
agents/research-agent/: SKILL.md
agents/research-agent/references/: RESEARCH_TEMPLATES.md  SEARCH_TECHNIQUES.md
agents/security-agent/: SKILL.md
agents/security-agent/references/: OWASP_GUIDE.md
agents/tester-agent/: SKILL.md
cargo_deepagents/: __init__.py  cli.py
cargo_deepagents/agents/api-agent/: SKILL.md
cargo_deepagents/agents/database-agent/: SKILL.md
cargo_deepagents/agents/docs-agent/: SKILL.md
cargo_deepagents/agents/document-agent/: SKILL.md
cargo_deepagents/plugins/desktop-mcp/: README.md  pyproject.toml
cargo_deepagents/plugins/desktop-mcp/desktop_mcp/: __init__.py
plugins/api-mcp/: pyproject.toml
plugins/api-mcp/api_mcp/: server.py
plugins/calendar-mcp/: pyproject.toml
plugins/database-mcp/: pyproject.toml
plugins/file-mcp/: pyproject.toml
(+46 files in other folders)
