[project]
name = "desktop-mcp"
version = "1.0.0"
description = "Desktop automation MCP server - keyboard, mouse, screen control"
authors = [{name = "DeepAgents"}]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyautogui>=0.9.54",
    "pillow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
